<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <TextView
                android:id="@+id/username_label"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColorLink="@color/vivid_violet"
                tools:text="\@van_darkholme" />

            <TextView
                android:id="@+id/distance_label"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                tools:text="14.32 км" />

            <TextView
                android:id="@+id/end_date_label"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                tools:text="14 часов назад" />

            <TextView
                android:id="@+id/duration_label"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                tools:text="1 ч 42 мин" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/start_label"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_details_start_label" />

                <TextView
                    android:id="@+id/start_time_label"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/light_gray"
                    tools:text="14:49" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/light_gray" />

                <TextView
                    android:id="@+id/end_label"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_details_end_label" />

                <TextView
                    android:id="@+id/end_time_label"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/light_gray"
                    tools:text="16:31" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    tools:text="Я бежал очень сильно, ты так не сможешь" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

